fix(homepage): cta z-index bug

--- a/src/components/homepage/FeaturedStoriesSection.css
+++ b/src/components/homepage/FeaturedStoriesSection.css
@@ -119,7 +119,7 @@
   padding-left:25px;
   padding-right:50px;
   position:relative;
-  z-index: 9999;
+  z-index: 2;
   margin-left:0px;
   width: 93%;
   bottom: 15%
@@ -131,7 +131,7 @@
   align-items: center;
   /* padding-left:25px; */
   /* padding-right:50px; */
-  z-index: 9999;
+  z-index: 2;
   margin-left:0px;
   /* width: 93%; */
   bottom: 15%;
